# financial-stream-agent

./: .gitignore  CMakeLists.txt  PHASE_3_README.md  README.md  requirements.txt
data/backtest_results/: backtest_report_20260714_225151.json  backtest_report_20260714_225317.json
data/headlines/: historical_headlines.json
src/: api.py  backtester.py  config.py  main.py  requirements.txt  signal_extractor.py
src/backtesting/: data_loader.py  metrics_calculator.py  reporter.py  signal_validator.py  synthetic_data.py
src/client/: trading_engine.cpp
src/cpp/client/: trading_engine.cpp
src/cpp/include/: trading_engine.h
src/data/backtest_results/: backtest_report_20260713_131642.json  backtest_report_20260713_170217.json  backtest_report_20260713_171156.json  backtest_report_20260713_171209.json  backtest_report_20260713_171221.json  backtest_report_20260713_171540.json
src/python/: __init__.py  api.py  backtesting_engine.py  news_fetcher.py  sentiment_analyzer.py
src/python/backtesting/: data_loader.py  init.py  reporter.py
tests/: test_agent.py
