cmake_minimum_required(VERSION 3.10)
project(FinancialStreamAgent)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Optional: High-performance C++ components
# add_executable(trading_engine src/client/trading_engine.cpp)
# TODO: Implement C++ trading engine for real-time stream processing

message(STATUS "Python-based Financial Stream Agent")
message(STATUS "C++ components: Planned for future versions")
